name:                mtl-c
version:             0.0.0.1
synopsis:            Monad transformers using continuation passing style
description:         Monad transformers in CPS
homepage:            https://github.com/fumieval/mtl-c
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2013 Fumiaki Kinoshita
category:            Monads
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Monad.Reader.CPS, Control.Monad.Writer.CPS, Control.Monad.State.CPS
  -- other-modules:       
  build-depends:       base ==4.*, mtl ==2.*